Fix example instances. Update notebooks.

--- a/RM/3_1_0/notebooks/00. Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/00. Getting Started.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "There are actually two structural *Items*. The XdAdapterType and the ClusterType. The XdAdapter is used to wrap any XdType so it can be included in a Cluster. When an XdType is used as another attribute, such as a XdStringType being used as a XdCount.units, then it doesn't need the XdAdapterType wrapper. \n",
     "\n",
-    "There is no separate tutorial for XdAdapterTypes as they are demonst."
+    "There is no separate tutorial for XdAdapterTypes as they are demonstrated in the ClusterType example."
    ]
   },
   {
