--- a/RM/3_1_0/notebooks/ClusterType Examples.ipynb
+++ b/RM/3_1_0/notebooks/ClusterType Examples.ipynb
@@ -34,6 +34,7 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
+    "from s3m_utils import xsdstub, xmlstub\n",
     "from s3m_struct import ClusterType, XdAdapterType\n",
     "from s3m_xdt import XdStringType, XdTemporalType, XdOrdinalType, XdCountType"
    ]
@@ -266,7 +267,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Each component needs to be placed inside a new adapter before being added to the Cluster\n",
@@ -312,13 +315,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(action.adapter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "ERF.published = True\n",
-    "print(ERF.getModel())"
+    "# print(ERF.getModel())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model and instance data are quite large so we will write these out to files for examination in an editor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass the model to write out\n",
+    "xsdstub(ERF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass the model to use for the data and if you want to generate example data pass True as the second parameter.\n",
+    "xmlstub(ERF,True)"
    ]
   }
  ],
