--- a/RM/3_1_0/notebooks/XdRatio Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdRatio Examples.ipynb
@@ -34,6 +34,7 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
+    "from s3m_utils import xsdstub, xmlstub\n",
     "from s3m_xdt import XdRatioType, XdStringType"
    ]
   },
@@ -55,14 +56,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class XdRatioType in module s3m_xdt:\n",
+      "\n",
+      "class XdRatioType(XdQuantifiedType)\n",
+      " |  XdRatioType(label)\n",
+      " |  \n",
+      " |  Models a ratio of values, i.e. where the numerator and denominator are both pure numbers. \n",
+      " |  \n",
+      " |  Should not be used for formulations. Used for modeling; ratios, rates or proportions.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      XdRatioType\n",
+      " |      XdQuantifiedType\n",
+      " |      XdOrderedType\n",
+      " |      XdAnyType\n",
+      " |      abc.ABC\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, label)\n",
+      " |      The semantic label (name of the model) is required.\n",
+      " |  \n",
+      " |  getModel(self)\n",
+      " |      Return a XML Schema complexType definition.\n",
+      " |  \n",
+      " |  getXMLInstance(self, example=False)\n",
+      " |      Return an XML fragment for this model.\n",
+      " |  \n",
+      " |  validate(self)\n",
+      " |      Every XdType must implement this method.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  den_max_exclusive\n",
+      " |      An exclusive maximum value.\n",
+      " |  \n",
+      " |  den_max_inclusive\n",
+      " |      An inclusive maximum value.\n",
+      " |  \n",
+      " |  den_min_exclusive\n",
+      " |      An exclusive minimum value.\n",
+      " |  \n",
+      " |  den_min_inclusive\n",
+      " |      An inclusive minimum value.\n",
+      " |  \n",
+      " |  denominator\n",
+      " |      Denominator of ratio.\n",
+      " |  \n",
+      " |  denominator_units\n",
+      " |      Used to convey the meaning of the denominator. Typically units such as; minutes, hours, days, years, months, etc.\n",
+      " |      May or may not come from a standard terminology.\n",
+      " |  \n",
+      " |  num_max_exclusive\n",
+      " |      An exclusive maximum value.\n",
+      " |  \n",
+      " |  num_max_inclusive\n",
+      " |      An inclusive maximum value.\n",
+      " |  \n",
+      " |  num_min_exclusive\n",
+      " |      An exclusive minimum value.\n",
+      " |  \n",
+      " |  num_min_inclusive\n",
+      " |      An inclusive minimum value.\n",
+      " |  \n",
+      " |  numerator\n",
+      " |      Numerator of ratio.\n",
+      " |  \n",
+      " |  numerator_units\n",
+      " |      Used to convey the meaning of the numerator. Typically countable units such as; cigarettes, drinks,\n",
+      " |      exercise periods, etc. May or may not come from a terminology.\n",
+      " |  \n",
+      " |  ratio\n",
+      " |      Numerator of ratio.\n",
+      " |  \n",
+      " |  ratio_type\n",
+      " |      Indicates specific type of ratio modeled in the DM as a 'ratio','rate', or 'proportion'.\n",
+      " |  \n",
+      " |  ratio_units\n",
+      " |      Used to convey the meaning of the ratio.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __abstractmethods__ = frozenset()\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from XdQuantifiedType:\n",
+      " |  \n",
+      " |  accuracy\n",
+      " |      Accuracy of the value in the magnitude attribute in the range 0% to (+/-)100%.\n",
+      " |      A value of 0 means that the accuracy is unknown.\n",
+      " |  \n",
+      " |  error\n",
+      " |      Error margin of measurement, as an integer indicating error in the recording method or instrument (+/- %).\n",
+      " |      A logical value of 0 indicates 100% accuracy, i.e. no error.\n",
+      " |  \n",
+      " |  magnitude_status\n",
+      " |      MagnitudeStatus provides a general indication of the accuracy of the magnitude expressed in the XdQuantified\n",
+      " |      subtypes. Should be used to inform users and not for decision support uses.\n",
+      " |      Must be one of: None,'equal','less_than', 'greater_than', 'less_than_or_equal', 'greater_than_or_equal', 'approximate'\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from XdOrderedType:\n",
+      " |  \n",
+      " |  normal_status\n",
+      " |      Optional normal status indicator of value with respect to normal range\n",
+      " |      for this value.\n",
+      " |      \n",
+      " |      Often used in situations such as medical lab results when coded by\n",
+      " |      ordinals in series such as; HHH, HH, H, (nothing), L, LL, LLL, etc.\n",
+      " |  \n",
+      " |  referenceranges\n",
+      " |      Optional list of ReferenceRanges for this value in its\n",
+      " |      particular measurement context.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from XdAnyType:\n",
+      " |  \n",
+      " |  __str__(self)\n",
+      " |      Return str(self).\n",
+      " |  \n",
+      " |  getJSONInstance(self, example=False)\n",
+      " |      Return an example JSON fragment for this model.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from XdAnyType:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  act\n",
+      " |      Access Control Tag. \n",
+      " |      \n",
+      " |      If this is used it must contain a valid term from the Access Control System linked \n",
+      " |      to by the containing Data Model 'acs' attribute. It is available as the ACS imported\n",
+      " |      from s3m_dm.\n",
+      " |  \n",
+      " |  acuid\n",
+      " |      The unique identifier of the wrapping XdAdapter of the component.\n",
+      " |  \n",
+      " |  adapter\n",
+      " |      When True, creates an XdAdapterType wrapper.\n",
+      " |  \n",
+      " |  cardinality\n",
+      " |      The cardinality status values.\n",
+      " |      \n",
+      " |      The setter method can be called by each subclass to add cardinality\n",
+      " |      values for each element or change the defaults.\n",
+      " |      Some elements cardinality may not be changed.\n",
+      " |      Ex: XdBoolean elements are not modifiable.\n",
+      " |      \n",
+      " |      The cardinality dictionary uses a string representation of each\n",
+      " |      property name and a list as the value.\n",
+      " |      \n",
+      " |      The value passed into the setter is a tuple with v[0] as a string (key) and\n",
+      " |      v[1] as a list containing an integer set representing the\n",
+      " |      (minimum, maximum) values. The entire value list is replaced in the dictionary.\n",
+      " |      \n",
+      " |      Examples\n",
+      " |      --------\n",
+      " |      \n",
+      " |      ('vtb', [1,1]) will set the vtb value to be required.\n",
+      " |      \n",
+      " |      \n",
+      " |      NOTES\n",
+      " |      -----\n",
+      " |      \n",
+      " |      The cardinality for latitude and longitude are combined into one\n",
+      " |      setting called 'location'.\n",
+      " |      \n",
+      " |      The Python value of 'None' represents the 'unbounded' XML Schema value.\n",
+      " |      None is converted to Decimal('Infinity') for comparisons.\n",
+      " |      The 'unbounded' value is allowed on only a few attributes.\n",
+      " |  \n",
+      " |  definition_url\n",
+      " |      The primary definition URL for the model.\n",
+      " |      Cannot be an IP address.\n",
+      " |      \n",
+      " |      REQUIRED\n",
+      " |  \n",
+      " |  docs\n",
+      " |      The human readable documentation string describing the purpose of\n",
+      " |      the model.\n",
+      " |  \n",
+      " |  ev\n",
+      " |      In an invalid instance, the application can indicate here why data is\n",
+      " |      missing or invalid. This is a list of ExceptionalValue subclasses.\n",
+      " |      \n",
+      " |      The sub-types are based on ISO 21090 NULL Flavors entries, with\n",
+      " |      additions noted from real-world usage.\n",
+      " |  \n",
+      " |  label\n",
+      " |      The semantic name of the component.\n",
+      " |      \n",
+      " |      REQUIRED\n",
+      " |  \n",
+      " |  latitude\n",
+      " |      Latitude in decimal format. Value range -90.000000 to 90.000000.\n",
+      " |  \n",
+      " |  longitude\n",
+      " |      Longitude in decimal format. Value range -180.000000 to 180.000000.\n",
+      " |  \n",
+      " |  mcuid\n",
+      " |      The unique identifier of the component.\n",
+      " |  \n",
+      " |  modified\n",
+      " |      Time Modified. If present this must be a valid date-time stamp.\n",
+      " |      It is used to indicate the date and time the data was last changed.\n",
+      " |  \n",
+      " |  pred_obj_list\n",
+      " |      A list of additional predicate object pairs to describe the component.\n",
+      " |      \n",
+      " |      Each list item is a tuple where 0 is the predicate and 1 is the object.\n",
+      " |      \n",
+      " |      Example:\n",
+      " |      ('rdf:resource','https://www.niddk.nih.gov/health-information/health-statistics')\n",
+      " |      The setter accepts the tuple and appends it to the list.\n",
+      " |      If an empty list is supplied it resets the value to the empty list.\n",
+      " |  \n",
+      " |  published\n",
+      " |      When True, prevents further model changes.\n",
+      " |  \n",
+      " |  tr\n",
+      " |      Time Recorded. If present this must be a valid date-time.\n",
+      " |      It is used to indicate the initial date and time the data was recorded.\n",
+      " |  \n",
+      " |  vtb\n",
+      " |      Valid Time Begin. If present this must be a valid datetime including timezone.\n",
+      " |      It is used to indicate the beginning time that information is considered valid.\n",
+      " |  \n",
+      " |  vte\n",
+      " |      Valid Time End. If present this must be a valid date-time including timezone.\n",
+      " |      It is used to indicate the ending time that information is considered valid\n",
+      " |      or the time the information expired or will expire.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(XdRatioType)"
    ]
@@ -107,14 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdRatioType : Wins vs. Losses, ID: cjnp7yhg80000va8p6eelyyra\n"
+      "XdRatioType : Wins vs. Losses, ID: cjo1ju8970000d8bibmlsoy74 Published: True\n"
      ]
     }
    ],
@@ -181,9 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdRatioType : Items purchased per visit, ID: cjo1ju89k0006d8bihurzf3bv Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "# A rate model\n",
     "rate = XdRatioType(\"Items purchased per visit\")\n",
@@ -246,9 +501,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdRatioType : Voter turnout, ID: cjo1ju89u000cd8bidzdt81ku Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "# A proportion model\n",
     "prop = XdRatioType(\"Voter turnout\")\n",
@@ -300,6 +563,35 @@
     "The proportion example: US midterms in 2018 in the state of Minnesota. \n",
     "\n",
     "This is why the S3Model approach is so insistent about defining as precisely as possible the spatial and temporal contexts.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to review the models and generate an example instance of each you may do so in the cells below. Execute each cell one at a time since they all write to the same files; stub.xsd and stub.xml.\n",
+    "\n",
+    "The values passed are the models created above. For the XML instance we also pass a *True* to generate example instance data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model for  XdRatioType : Wins vs. Losses, ID: cjo1ju8970000d8bibmlsoy74 Published: True  to stub.xsd\n",
+      "Writing data instance for  XdRatioType : Wins vs. Losses, ID: cjo1ju8970000d8bibmlsoy74 Published: True  to stub.xml\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ratio model\n",
+    "xsdstub(ratio)\n",
+    "xmlstub(ratio,True)"
    ]
   }
  ],
