--- a/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
@@ -33,6 +33,7 @@
    "outputs": [],
    "source": [
     "import sys \n",
+    "import datetime\n",
     "sys.path.append(\"../pylib/\")\n",
     "from s3m_xdt import XdTemporalType"
    ]
@@ -52,7 +53,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -130,6 +131,38 @@
     "print('\\n\\n')\n",
     "d.published = True\n",
     "print(d.getModel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(d, '\\n\\n')\n",
+    "\n",
+    "# Set a date value\n",
+    "d.date = datetime.date.today()\n",
+    "print(d.getXMLInstance())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# set a (year,month) value based on the date\n",
+    "d.year_month = (d.date.year, d.date.month)\n",
+    "\n",
+    "# for demo purposes reset the date value so we only get one type of data\n",
+    "d.date = None\n",
+    "\n",
+    "print(d.getXMLInstance())"
    ]
   }
  ],
