--- a/RM/3_1_0/notebooks/RefRange Examples.ipynb
+++ b/RM/3_1_0/notebooks/RefRange Examples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -36,6 +36,7 @@
     "from decimal import Decimal\n",
     "\n",
     "sys.path.append(\"../pylib/\")\n",
+    "from s3m_utils import xsdstub, xmlstub\n",
     "from s3m_xdt import XdQuantityType, XdStringType, XdIntervalType, ReferenceRangeType"
    ]
   },
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -108,17 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XdStringType : Concentration Units, ID: cjnvumdt60036wlbirzdo1847 Published: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create the units model\n",
     "u = XdStringType('Concentration Units')\n",
@@ -137,17 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XdQuantityType : Total Cholesterol, ID: cjnvumdtf0038wlbikw8n99b3 Published: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the Quantity model\n",
     "d = XdQuantityType(\"Total Cholesterol\")\n",
@@ -164,18 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XdIntervalType : TCDR (mmol/L), ID: cjnvumdts003cwlbig1ru2485 Published: True\n",
-      "ReferenceRangeType : Total Cholesterol Desireable Range (mmol/L), ID: cjnvumdts003awlbimh2ikoiy Published: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define reference ranges and intervals for the Desireable range\n",
     "mmol = ReferenceRangeType(\"Total Cholesterol Desireable Range (mmol/L)\")\n",
@@ -190,7 +166,6 @@
     "i.lower = '0'\n",
     "i.upper = '5.2'\n",
     "i.upper_included = False\n",
-    "i.lower_included = False\n",
     "i.published = True\n",
     "\n",
     "mmol.interval = i\n",
@@ -203,18 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XdIntervalType : TCDR (mg/dL), ID: cjnvumdu1003gwlbi3ashi1gt Published: True\n",
-      "ReferenceRangeType : Total Cholesterol Desireable Range (mg/dL), ID: cjnvumdu1003ewlbi6hyxwzra Published: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mg = ReferenceRangeType(\"Total Cholesterol Desireable Range (mg/dL)\")\n",
     "mg.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#desireable/mg'\n",
@@ -238,18 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XdIntervalType : TCBR (mmol/L), ID: cjnvumdua003kwlbilfq9klvx Published: True\n",
-      "ReferenceRangeType : Total Cholesterol Borderline high Range (mmol/L), ID: cjnvumdua003iwlbiuiou7a6u Published: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define two reference ranges for the Borderline high range\n",
     "mmol = ReferenceRangeType(\"Total Cholesterol Borderline high Range (mmol/L)\")\n",
@@ -274,18 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XdIntervalType : TCBR (mg/dL), ID: cjnvumdun003owlbidgem74vi Published: True\n",
-      "ReferenceRangeType : Total Cholesterol Borderline high Range (mg/dL), ID: cjnvumdun003mwlbiq4lafhqo Published: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mg = ReferenceRangeType(\"Total Cholesterol Borderline high Range (mg/dL)\")\n",
     "mg.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#Borderlinehigh/mg'\n",
@@ -308,18 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XdIntervalType : TCHR (mmol/L), ID: cjnvumdv0003swlbi6fb0jlod Published: True\n",
-      "ReferenceRangeType : Total Cholesterol High Range (mmol/L), ID: cjnvumdv0003qwlbidvg8t4a8 Published: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define two reference ranges for the High range\n",
     "mmol = ReferenceRangeType(\"Total Cholesterol High Range (mmol/L)\")\n",
@@ -330,7 +269,7 @@
     "\n",
     "i.lower = '6.2'\n",
     "i.lower_included = False\n",
-    "i.upper_unbounded = True\n",
+    "i.upper_bounded = False\n",
     "i.published = True\n",
     "mmol.interval = i\n",
     "mmol.published = True\n",
@@ -343,19 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XdIntervalType : TCHR (mg/dL), ID: cjnvumdvc003wwlbifhe952o7 Published: True\n",
-      "ReferenceRangeType : Total Cholesterol High Range (mg/dL), ID: cjnvumdvc003uwlbiklwcg85k Published: True\n",
-      "XdQuantityType : Total Cholesterol, ID: cjnvumdtf0038wlbikw8n99b3 Published: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mg = ReferenceRangeType(\"Total Cholesterol High Range (mg/dL)\")\n",
     "mg.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#high/mg'\n",
@@ -370,11 +299,10 @@
     "mg.interval = i\n",
     "mg.published = True\n",
     "d.referenceranges = mg\n",
+    "d.published = True\n",
     "\n",
     "print(i)\n",
     "print(mg)\n",
-    "\n",
-    "d.published = True\n",
     "print(d)"
    ]
   },
@@ -382,90 +310,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Examine the model. Here we write the model stub as a file named stub.xsd. First we write defaults to instantiate the namespaces needed then create a *root* element to use as a wrapper. This *root* element is not part of S3Model. It is only used here so that we can demonstrate validation of the generated stub.xml below. \n",
-    "\n",
-    "**Note** If you get an error saying that *xsd* hasn't been defined then just run the cell again. It seems to be a bug in the Jupyter notebook *%%capture* magic command."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "%%capture xsd\n",
-    "print(d.getModel())\n",
-    "with open('stub.xsd', 'w') as f:\n",
-    "    f.write(\"\"\"<?xml version='1.0' encoding='UTF-8'?>\n",
-    "<xs:schema xmlns:xs=\"http://www.w3.org/2001/XMLSchema\"\n",
-    "  xmlns:rdfs=\"http://www.w3.org/2000/01/rdf-schema#\"\n",
-    "  xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
-    "  xmlns:vc=\"http://www.w3.org/2007/XMLSchema-versioning\" xmlns:s3m=\"https://www.s3model.com/ns/s3m/\"\n",
-    "  targetNamespace=\"https://www.s3model.com/ns/s3m/\">\n",
-    "  <xs:include schemaLocation=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd\"/>\n",
-    " \n",
-    "<xs:element name=\"root\"/>\n",
-    "\n",
-    "  \"\"\")\n",
-    "  \n",
-    "    f.write(xsd.stdout)\n",
-    "    f.write(\"</xs:schema>\")\n",
-    "    \n",
-    "del xsd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Write a XML instance example. Again, we wrap the stub XML in a *root* element with the namespace declarations and point to stud.xsd to use for validation.\n",
-    "\n",
-    "**Note** If you get an error saying that *xml* hasn't been defined then just run the cell again. It seems to be a bug in the Jupyter notebook *%%capture* magic command."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "%%capture xml\n",
-    "d.value = 128.00\n",
-    "print(d.getXMLInstance())\n",
-    "with open('stub.xml', 'w') as f:\n",
-    "    f.write(\"\"\"<?xml version='1.0' encoding='UTF-8'?>\n",
-    "<s3m:root xmlns:xs=\"http://www.w3.org/2001/XMLSchema\" \n",
-    "  xmlns:s3m=\"https://www.s3model.com/ns/s3m/\"\n",
-    "  targetNamespace=\"https://www.s3model.com/ns/s3m/\"\n",
-    "  xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\n",
-    "  xsi:schemaLocation='https://www.s3model.com/ns/s3m/ stub.xsd'\n",
-    ">\n",
-    "\n",
-    "\"\"\")\n",
-    "  \n",
-    "    f.write(xml.stdout)\n",
-    "    f.write(\"</s3m:root>\")\n",
-    "    \n",
-    "del xml"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are now two files; stub.xsd and stub.xml, in your notebooks directory. You can use any XML validation tool on stub.xml"
+    "Examine the model. Here we write the model stub (it is not a complete S3Model Data Model) as a file named stub.xsd. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "xsdstub(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you view the XML Schema model notice that the required namespaces are wrapped using a *root* element. This *root* element is not part of S3Model. It is only used here so that we can demonstrate validation of the generated stub.xml below. \n",
+    "\n",
+    "We need to add data before creating a XML instance.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Select a valid units value\n",
+    "d.units.value = 'mg/dL'\n",
+    "# enter a value\n",
+    "d.value = 123.4\n",
+    "\n",
+    "xmlstub(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are now two files; stub.xsd and stub.xml, in your notebooks directory. You can use any XML validation tool on stub.xml to validate it against stub.xsd."
+   ]
   }
  ],
  "metadata": {
