Complete Party example notebook.

--- a/RM/3_1_0/notebooks/ClusterType Examples.ipynb
+++ b/RM/3_1_0/notebooks/ClusterType Examples.ipynb
@@ -359,6 +359,16 @@
     "# pass the model to use for the data and if you want to generate example data pass True as the second parameter.\n",
     "xmlstub(ERF,True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can also get your data as JSON\n",
+    "print(ERF.getJSONInstance(True))"
+   ]
   }
  ],
  "metadata": {
