--- a/RM/3_1_0/notebooks/Party Examples.ipynb
+++ b/RM/3_1_0/notebooks/Party Examples.ipynb
@@ -34,6 +34,7 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
+    "from s3m_utils import xsdstub, xmlstub\n",
     "from s3m_xdt import XdLinkType, XdStringType\n",
     "from s3m_struct import ClusterType, XdAdapterType, ItemType\n",
     "from s3m_meta import PartyType"
@@ -126,6 +127,17 @@
     "# Review the model\n",
     "pty.published = True\n",
     "print(pty.getModel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create stubs\n",
+    "xsdstub(pty)\n",
+    "xmlstub(pty, True)"
    ]
   }
  ],
